# Autonomous-SLAM-Robot

config/: nav2_params.yaml
custom_robot_description/: CMakeLists.txt  package.xml
custom_robot_description/config/: bridge_parameters.yaml  mapper_params_online_async.yaml  nav2_localization.yaml
custom_robot_description/launch/: autonomous_SLAM.py  obsolete.py  old_sim.py  scenario_test.py  slam_test.py
custom_robot_description/maps/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml
custom_robot_description/rviz/: map_robotmodel_scan.rviz
custom_robot_description/scripts/: frontier_exploration.py  frontier_search.py  mission.py  mission2.py
custom_robot_description/urdf/: robot.urdf (copy 1).xacro  robot.urdf.xacro
custom_robot_description/worlds/: custom_room.sdf  final_test.sdf
